adds the new test for the restart game button, creates new file for styling and adds button to th eindex.html file

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <body>
   <div class="container">
       <header class="hearder">
-        <h1 id="title">Rock Paper Scissors</h1> 
+        <h1 id="title">Rock Paper Scissors</h1>
+        <button id="restart" class="restart-btn">Restart Game</button> 
       </header>
   </div>  
    
