adds the new test for the score board and adds the score section for computer and player on Html file

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,11 @@
   <div class="container">
       <header class="hearder">
         <h1 id="title">Rock Paper Scissors</h1>
-        <button id="restart" class="restart-btn">Restart Game</button> 
+        <button id="restart" class="restart-btn">Restart Game</button>
+        <div id="score" class="score">
+            <p id="score-1">Player: 0</p>
+            <p id="score-2">Computer: 0</p>
+        </div> 
       </header>
   </div>  
    
