adds one line of test to display make your selection to the player and add the line to html file

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
             <p id="score-2">Computer: 0</p>
         </div> 
       </header>
+      <h2>Make Your Selection</h2>
   </div>  
    
 </body>
