adds the test to check the availibility of the icons and adds the icons in HTML file

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
         </div> 
       </header>
       <h2>Make Your Selection</h2>
+      <div class="choices">
+          <i id="rock" class="choice fa fa-hand-rock-o fa-10x"></i>
+          <i id="paper" class="choice fa fa-hand-paper-o fa-10x"></i>
+          <i id="scissors" class="choice fa fa-hand-scissors-o fa-10x"></i>
+      </div>
   </div>  
    
 </body>
