--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta  http-equiv="X-UA-Compatible"  content="ie=edge">
     <script src="https://kit.fontawesome.com/9f6fe96faf.js"  crossorigin="anonymous"></script>
+    <link  rel="stylesheet"  href="./assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
   <div class="container">
       <header class="hearder">
-        <h1 id="title">Rock Paper Scissors</h1>
+        <h1 id="title">Let's Play Rock Paper Scissors</h1>
         <button id="restart" class="restart-btn">Restart Game</button>
         <div id="score" class="score">
             <p id="score-1">Player: 0</p>
@@ -18,12 +19,21 @@
         </div> 
       </header>
       <h2>Make Your Selection</h2>
-      <div class="choices">
+      <div id="choices" class="choices">
           <i id="rock" class="choice fa fa-hand-rock-o fa-10x"></i>
           <i id="paper" class="choice fa fa-hand-paper-o fa-10x"></i>
           <i id="scissors" class="choice fa fa-hand-scissors-o fa-10x"></i>
       </div>
-  </div>  
-   
+  </div> 
+  <!--Modal--> 
+  <div class="modal">
+      <div id="result" class="modal-content">
+        <h1>You Win</h1>
+        <i class="fa fa-hand-rock-o fa-10x"></i>
+        <p>Computer Chose Rock</p>  
+      </div>
+  </div>
+  <script  src="./assets/js/rpsLogic.js"></script>
+  <script  src="./assets/js/rpsUI.js"></script>  
 </body>
 </html>
