modifies the test foe each icon , remove modal and put the result as a simple text, modifies the index html file

--- a/src/index.html
+++ b/src/index.html
@@ -26,14 +26,10 @@
       </div>
   </div> 
   <!--Modal--> 
-  <div class="modal">
-      <div id="result" class="modal-content">
-        <h1>You Win</h1>
-        <i class="fa fa-hand-rock-o fa-10x"></i>
-        <p>Computer Chose Rock</p>  
-      </div>
+  <div class="message">
+      <div id="result" class="message-content"></div>  
   </div>
-  <script  src="./assets/js/rpsLogic.js"></script>
-  <script  src="./assets/js/rpsUI.js"></script>  
+  <script  src="./assets/js/rps.js"></script>
+    
 </body>
 </html>
