--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <h1 id="title">Let's Play Rock Paper Scissors</h1>
         <button id="restart" class="restart-btn">Restart Game</button>
         <div id="score" class="score">
-            <p id="score-1">Player: 0</p>
-            <p id="score-2">Computer: 0</p>
+            <p id="player">Player: 0</p>
+            <p id="computer">Computer: 0</p>
         </div> 
       </header>
       <h2>Make Your Selection</h2>
@@ -25,8 +25,8 @@
           <i id="scissors" class="choice fa fa-hand-scissors-o fa-10x"></i>
       </div>
   </div> 
-  <!--Modal--> 
-  <div class="message">
+  <!--Message--> 
+  <div id="message" class="message">
       <div id="result" class="message-content"></div>  
   </div>
   <script  src="./assets/js/rps.js"></script>
